--- a/src/features/todolist/components/CategoryBoardItem/categoryBoardItem.module.css
+++ b/src/features/todolist/components/CategoryBoardItem/categoryBoardItem.module.css
@@ -86,6 +86,11 @@
 .taskBoard::-webkit-scrollbar-thumb {
   background: var(--accent-color);
   border-radius: 5px;
+  cursor: pointer;
+}
+
+.taskBoard::-webkit-scrollbar-thumb:hover {
+  background-color: #d4e5ff;
 }
 
 .taskBoard::-webkit-scrollbar-track {
